Added an image to the HTML file and edited the margins and paddings on the CSS file.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<p>Got banished from the Fire Nation when he was a child when he went against his father. He has been trying to restore his honor ever since.</p>
 		<img src="https://comicvine1.cbsistatic.com/uploads/original/14/149973/7162503-zuko.png">
 		<p class="caption">Prince Zuko with swords</p>
+
 		<!-- Characteristics -->
 		<h2>Zuko's Characteristics</h2>
 		<ol>
@@ -25,7 +26,10 @@
 			<li>He hates the avatar</li>
 			<li>He loves the avatar</li>
 		</ol>
+
 		<!-- Friends -->
+		<img src="https://pmcvariety.files.wordpress.com/2018/09/last-airbender.jpg?w=681&h=383&crop=1">
+		<p class="caption">Zuko's friends</p>
 		<h2>Zuko's Friends</h2>
 		<p>Zuko had no friends... until he met the avatar. Click on the links below to read more about them.</p>
 		<ul>
